# SPBU.formal_language

./: CMakeLists.txt  grammar.cpp  grammar.h  graph.cpp  graph.h  install.sh  main.cpp  uninstall.sh
